fixed account dropdown z-index issue - header color changes

--- a/frontend/map/styles/bootstrap.styl
+++ b/frontend/map/styles/bootstrap.styl
@@ -177,6 +177,7 @@ button
     background-color $white_70
     border-radius 3px;
     box-shadow 0px 1px 2px $black_40
+    color $dark_blue
 
     &:hover
     &:active
