--- a/frontend/map/styles/common.styl
+++ b/frontend/map/styles/common.styl
@@ -384,7 +384,7 @@ $fnFooterClose()
   position: absolute
   height $slideoutHeight
   width: 100%
-  z-index: 1000
+  z-index: 3
   top: 0px
   background-color: $dark_blue
   bottom: 0
