--- a/frontend/map/styles/leaflet.styl
+++ b/frontend/map/styles/leaflet.styl
@@ -8,3 +8,6 @@
 
 .leaflet-popup-tip-container
   display:none
+
+.leaflet-top, .leaflet-right, .leaflet-bottom, .leaflet-left
+  z-index 3
